--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "homepage": "https://bohdan-fe.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
